//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  role Role [not null]
  cart Cart
  orders Order [not null]
  likes Product [not null]
  createdProducts Product [not null]
}

Table Product {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  description String
  price Float [not null]
  category Category
  categoryId String
  stock Int [not null]
  images Image [not null]
  isDisabled Boolean [not null, default: false]
  likedBy User [not null]
  createdBy User
  createdById String
  Order Order [not null]
  Cart Cart [not null]
}

Table Image {
  id String [pk]
  url String [not null]
  product Product [not null]
  productId String [not null]
}

Table Category {
  id String [pk]
  name String [unique, not null]
  products Product [not null]
}

Table Order {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  user User [not null]
  userId String [not null]
  products Product [not null]
  status OrderStatus [not null]
}

Table Cart {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [unique, not null]
  products Product [not null]
}

Table LikedProducts {
  likesId String [ref: > Product.id]
  likedbyId String [ref: > User.id]
}

Table ProductOrders {
  orderId String [ref: > Order.id]
  productsId String [ref: > Product.id]
}

Table ProductCarts {
  cartId String [ref: > Cart.id]
  productsId String [ref: > Product.id]
}

Enum Role {
  MANAGER
  CLIENT
}

Enum OrderStatus {
  PENDING
  COMPLETED
  CANCELED
}

Ref: Product.categoryId > Category.id

Ref: Product.createdById > User.id

Ref: Image.productId > Product.id

Ref: Order.userId > User.id

Ref: Cart.userId - User.id